fix alert success color in dark mode. refs #759

--- a/src/theme/application-variables.less
+++ b/src/theme/application-variables.less
@@ -23,6 +23,7 @@
 @dark-button : #665F62;
 @dark-menu: #312E2F;
 @dark-warning : #777;
+@dark-success: #597b59;
 
 
 @order-book-sell :rgba(255, 88, 88, 0.5);
