--- a/src/theme/application.less
+++ b/src/theme/application.less
@@ -333,6 +333,11 @@
             background: @dark-warning !important;
             border: 1px solid @dark-warning !important;
     }
+    .ant-alert-success
+    {
+            background: @dark-success !important;
+            border: 1px solid @dark-success !important;
+    }
     .ant-alert-info
     {
         background: @dark-menu  !important;
